grid layout bugs fixed

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -11,7 +11,6 @@
       padding-bottom: var(--space-40);
       display: grid;
       grid-template-columns: 1fr;
-      gap: var(--space-32);
 
       @media (--tablet-vw) {
         grid-template-columns: 1fr 3fr;
